--- a/style.css
+++ b/style.css
@@ -241,6 +241,8 @@ a {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    filter: drop-shadow(0 0 5px #FFB7F0) drop-shadow(0 0 4px #FF5EDD);
+
   }
 
   .h1-symbols {
@@ -252,8 +254,8 @@ a {
     justify-content: flex-end;
     width: 100%;
     height: 100vh;
-    padding-left: 1%;
-    padding-right: 1%;
+    padding-left: 0%;
+    padding-right: 0%; /* used to be 1% */
     gap: 1%;
   }
 
