--- a/style.css
+++ b/style.css
@@ -249,13 +249,23 @@ a {
     font-size: clamp(24px, 6vw, 32px);
   }
 
+  .header-container {
+    position: relative;
+    padding: 0 ;
+    margin: 0;
+    overflow: visible;
+    background: inherit;
+    backdrop-filter: blur(4px);
+    z-index: 10;
+  }
+
   .intro {
     flex-direction: column-reverse;
     justify-content: flex-end;
     width: 100%;
     height: 100vh;
-    padding-left: 0%;
-    padding-right: 0%; /* used to be 1% */
+    padding-left: 1%;
+    padding-right: 1%; /* used to be 1% */
     gap: 1%;
   }
 
@@ -263,6 +273,7 @@ a {
     flex-shrink: 0;
     flex-grow: 0;
     flex-basis: 9%;
+    width: 80%;
   }
 
   .projects {
@@ -296,9 +307,9 @@ a {
     z-index: 1;
   }
 
-  .snowflake:nth-child(1) { left: 10%; top: 9%; }
-  .snowflake:nth-child(2) { left: 20%; top: 10%; }
-  .snowflake:nth-child(3) { left: 24%; top: 17%; }
+  .snowflake:nth-child(1) { left: 10%; top: 12%; }
+  .snowflake:nth-child(2) { left: 20%; top: 13%; }
+  .snowflake:nth-child(3) { left: 24%; top: 20%; }
   .snowflake:nth-child(4) { left: 41%; top: 22%; }
   .snowflake:nth-child(5) { left: 42%; top: 24%; }
   .snowflake:nth-child(6) { left: 11%; top: 32%; }
