--- a/style.css
+++ b/style.css
@@ -364,20 +364,24 @@ a {
   color: #2D9D78;
 }
 
+
 button {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
   background-color: #efefef;
   padding: 1px 6px;
-  border-width: 2px;
-  border-style: outset;
-  border-color: #5D5D5D;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #767676;
   border-image: initial;
-  border-radius: 0;
+  border-radius: 2px;
   box-sizing: border-box;
   font: inherit;
   color: #000;
   text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 100;
   cursor: default;
 }
+
