--- a/style.css
+++ b/style.css
@@ -231,17 +231,16 @@ button {
   -moz-appearance: none;
   appearance: none;
   background-color: #efefef;
-  padding: 1px 6px;
+  padding: 2px 6px;
   border-width: 1px;
   border-style: solid;
   border-color: #767676;
   border-image: initial;
   border-radius: 2px;
   box-sizing: border-box;
-  font: inherit;
   color: #000;
   text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, system-ui, sans-serif;
   font-weight: 100;
   cursor: default;
 }
@@ -259,6 +258,9 @@ button {
 #hi {
   position: relative;
   padding: 2px;
+}
+
+.socials {
 }
 
 /*pop-up styles!!!*/
@@ -355,6 +357,26 @@ button {
     flex-grow: 0;
     flex-basis: 9%;
     width: 80%;
+  }
+
+  button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-color: #efefef;
+    padding: 2px 6px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #767676;
+    border-image: initial;
+    border-radius: 2px;
+    box-sizing: border-box;
+    color: #000;
+    text-align: center;
+    font-family: Arial, system-ui, sans-serif;
+    font-weight: 100;
+    font-size: 12px;
+    cursor: default;
   }
 
   .projects {
