update header container bg

--- a/style.css
+++ b/style.css
@@ -531,7 +531,7 @@ button {
     padding: 0 ;
     margin: 0;
     overflow: visible;
-    background: inherit;
+    background: none !important;
     backdrop-filter: blur(4px);
     z-index: 10;
   }
